ER-1296: Fix single promoted material alignment

--- a/sites/all/themes/orwell/assets/sass/component/_article-teaser.scss
+++ b/sites/all/themes/orwell/assets/sass/component/_article-teaser.scss
@@ -121,7 +121,8 @@
     position: absolute;
     top: 70px;
     right: var(--spacerX2);
-    width: 155px; /* Fixed width needed to avoid stacking the images in Safari */
+    width: 200px; /* Fixed width needed to avoid stacking the images in Safari */
+    text-align: right;
     @include grid-media($medium) {
       top: 120px;
       text-align: center;
